--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -34,6 +34,8 @@
 \begin{center}
 \textsc{\huge Mémoire de recherche}
 
+\textsc{\large Rapport technique}
+
 \textsc{\textit{Pour un nouveau roman}, édition numérique}
 
 
@@ -68,7 +70,7 @@ Année universitaire 2022-2023
 \end{center}
 
 
-\end{titlepage}	
+\end{titlepage} 
 
 \newcommand{\punr}{\textit{Pour un nouveau roman}}
 \newcommand{\robbe}{Alain~Robbe-Grillet}
@@ -177,7 +179,7 @@ L'association MENTION devient une table car les deux entités qu'elle relie ont 
     Lors de l'implémentation, nous nous connectons à un serveur local (soit un serveur hébergé sur notre propre machine) via un logiciel dédié et rentrons à la main ou grâce à des scripts les données qui prennent dans l'interface de l'application l'apparence de tableaux (on retrouve notre modèle relationnel). Proches de la langue naturel, les scripts servant à la création de la base n'ont en eux-même que peu d'intérêt, on envoie litttéralement des chaînes de caractères dans un ordre donné.
     %SCREEN PHPmyAdmin
 
-\subsection{Mode d'établissement des valeurs} des attributs.
+\subsection{Mode d'établissement des valeurs des attributs} 
 \label{ref:dbEtabValeurs}
 \subsubsection{aOrder, conception de la structure du recueil}
 Il convient de noter une particularité dans la structure du recueil qui nécessita un choix de notre part~: cinq articles sont présentés dans le recueil comme des sous-sections d'un chapitre «~Éléments d'une anthologie moderne~», dès lors il eût pu paraître nécessaire de prévoir des valeurs de aOrder sur le modèle 5.1, 5.2 etc. dénotant section et sous-section, cependant dans la mesure où l'article enchâssant les cinq critiques littéraires constituant l'ensemble est ajouté \textit{a posteriori} il nous parut préférable de le considérer comme un article à part entière détaché de ses sous-articles qui n'entretiennent aucun lien explicite si ce n'est leur introduction, sorte de propos général ayant une fonction de seuil, ce choix nous paraît d'autant plus déterminant que l'on note l'absence de conclusion achevant de constituer l'ensemble.
@@ -258,7 +260,12 @@ Afin de proposer une édition numérique enrichie de \punr, nous optons pour un 
     \subsection{Principes généraux}
 Le langage XML est un langage de balisage~: l'encodeur entoure chacun des éléments qu'il juge devoir être encodé (l'ensemble du texte, un paragraphe, un mot, voire une lettre) de balises ouvrantes et fermantes éclairant la nature du passage qu'elles entourent (libre à l'encodeur d'encadrer un paragraphe en tant que paragraphe ou en tant que saut sémantique).
 
-%SCREEN BALISAGE
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.45]{img/screen_encodage.jpg}
+    \caption{Exemple d'encodage xml-tei}
+    \label{fig:screen_encodage}
+\end{figure}
 
 L'encodeur étant libre de choisir les éléments qu'il encode et comment il les encode, des conventions internationales ont émérgés afin de permettre l'interopérabilité des corpus balisés. Le plus utilisé en science humaine demeure sans doute le standard de la \textit{Text Encoding Initiative} (TEI) que nous employons pour la présente édition. Initialement pensé pour la restitution de sources anciennes (tels des manuscrits du \textsc{XVI}\textsuperscript{e}) cet encodage nous permet d'identifier des éléments structurel très fin et de mettre en correspondance différents extraits constituant un corpus (voir \ref{tei}).
 
@@ -266,7 +273,7 @@ Lors du rapport d'étape soumis courant décembre 2022, nous avions l'intention
 
 
     \subsection{Mise en œuvre}
-}
+
 
 \subsubsection{Un premier fichier d'encodage}
 \label{premier_enc}
@@ -289,7 +296,7 @@ Ont été remplacés par les balises xml-tei jugée pertinentes~:
     \item les éléments <i>, au demeurant déprécié selon les normes actuelles du web, par des éléments <hi> muni d'un attribut @rend avec pour valeur "italic"
     \item les éléments <p> marquant les paragraphes ont été conservés mais sans leur attribut @class de valeur "txt"
     \item les éléments <h1> marquant les titres ont été remplacé par des éléments <head>
-    \les éléments <h2> marquant les titres de sous-sections (par exemple « L'intrigue », sous-section de « De quelques notions périmés ») par des éléments <head> avec un attribut @type ayant pour valeur "subsection_head"
+    \item les éléments <h2> marquant les titres de sous-sections (par exemple «~L'intrigue~», sous-section de «~De quelques notions périmés~») par des éléments <head> avec un attribut @type ayant pour valeur "subsection\_head"
     \item les éléments <small> par des éléments <hi> munis d'un attribut @rend avec pour valeur "small-caps"
     \item les éléments <sup> par des éléments <hi> munis d'un attribut @rend avec pour valeur "exposant"
     \item les éléments <blockquote> par des éléments <cit>
@@ -300,7 +307,7 @@ Notons que le nettoyage a été effectué en conservant, grâce à des commentai
 
 Nous ajoutons des balises ouvrantes <quote> à chaque fois que le script de nettoyage rencontre le caractère "«" et fermante après le caractère "»", afin d'effectuer un premier repérage automatique des citations ou emprunts, qui seront ensuite complété et corrigé à la main si besoin. Notons que le script de nettoyage ajoute également ces éléments en début et en fin de paragraphe du segment «~Joë Bousquet le rêveur~» où nécessaire (lorsque \robbe{} cite plus d'un paragraphe il n'insère pas de guillemets, rendant le balisage automatique plus laborieux).
 
-Nous ajoutons égalements des éléments <div> marquant les sections du texte autour de chaque article du recueil ainsi qu'autour des passages identifiables à des sous-sections (telles les «~notions périmées~») cette fois munis d'attributs @type ayant pour valeur "subsection".
+Nous ajoutons également des éléments <div> marquant les sections du texte autour de chaque article du recueil ainsi qu'autour des passages identifiables à des sous-sections (telles les «~notions périmées~») cette fois munis d'attributs @type ayant pour valeur "subsection".
 
 Nous obtenons alors un fichier \go.xml\gf valide qui n'est encore qu'une étape pour l'encodage complet.
 
@@ -308,7 +315,12 @@ Nous obtenons alors un fichier \go.xml\gf valide qui n'est encore qu'une étape 
 \label{tei}
 
 Afin d'intégrer les références transtextuelles de \punr{} à notre édition pour permettre l'édition enrichie que nous nous proposons de réaliser nous employons un encodage de type «~corpus\gf. 
-%SCREEN ENCODAGE VIDE
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{img/screen_itei_corpus.jpg}
+    \caption{La structure du fichier d'encoage}
+    \label{fig:screen_tei_corpus}
+\end{figure}
 Alors que la majorité des encodages TEI se contente d'un seul élément <TEI> contenant l'œuvre ou le manuscrit encodé nous employons un élément <corpus> qui contiendra plusieurs éléments <TEI> identifiés grâce à des attributs @xml:id. Une version vide du fichier xml a pour cela était produite. Cet xml vide converti au format texte brut est ensuite injecté par le script de fusion et de nettoyage des fichiers qui compose \punr. Il contient~:
 \begin{itemize}
     \item un élément <teiHeader> (sorte de carte d'identité du document ou du texte) pour l'ensemble du fichier, contenant des informations succintes sur le projet d'édition auquel est rattaché le fichier
@@ -317,18 +329,23 @@ Alors que la majorité des encodages TEI se contente d'un seul élément <TEI> c
 \end{itemize}
 
 Si nous reproduisons l'intégralité de \punr{} dans l'élément <text> qui lui correspond nous n'insérons dans les autres éléments <text> que les extraits qui nous intérèsse~: nous produisons bien une édition de \punr{} inscrit dans un corpus plus vaste, pas l'édition d'un corpus dont \punr{} ne serait qu'un élément. Extraits transtextuels et passages de \punr{} correspondant sont ensuite liés via un jeu d'attributs @corresp et @xml:id.
-%screen corresp
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{img/screen_corresp.jpg}
+    \caption{Exemple de correspondance}
+    \label{fig:screen_corresp}
+\end{figure}
 \subsubsection{Encodage sémantique automatisé}
 
 On désigne généralement par «~encodage sémantique~» l'ajout d'éléments xml identifiant des noms de personnages, des toponymes, des dates, des références, etc. Afin d'accélerer cette étape fastidieuse nous optons pour un premier encodage automatisé. Pour cela, nous ajoutons à notre script de nettoyage des lignes servant à repérer les noms d'auteurs et à les baliser selon le modèle suivant~:
 \begin{itemize}
     \item un élément <ref> (référence)
     \item muni d'un attribut @type avec pour valeur "author"
-    \item et d'un attribut @cRef (référence canonique) dont la valeur est constituée sur le modèle «~nom_prenom~». Générée automatiquement par le script, cette valeur comprendra des majuscules et/ou des lettres accentuées (puisque \robbe{} écrit «~Samuel Beckett~» la valeur sera "Beckett_Samuel"), elle fera l'objet d'une correction grâce à l'emploi d'une feuille xsl.
+    \item et d'un attribut @cRef (référence canonique) dont la valeur est constituée sur le modèle «~nom\_prenom~». Générée automatiquement par le script, cette valeur comprendra des majuscules et/ou des lettres accentuées (puisque \robbe{} écrit «~Samuel Beckett~» la valeur sera "Beckett\_Samuel"), elle fera l'objet d'une correction grâce à l'emploi d'une feuille xsl.
 \end{itemize}
 Afin d'éviter le double balisage, nous balisons la dénomination complète («~Samuel Beckett~») en ajoutant un espace insécable entre le prénom et le nom, avant de baliser «~Beckett~» seul, s'il est précédé d'un espace sécable.
 % Voir ci-dessous si maintenu~:
-Nous ajoutons ensuite au script de nettoyage les noms des personnages des pièces de Beckett abondamment cité dans l'article « Samuel Beckett, ou la présence sur la scène » balisé en tant que <quote> et le concept de « Nature » balisé en tant que <ref> avec pour valeur de l'attribut @type "concept" et @cRef "philo_nature", ainsi que l'Académie française mentionnée deux fois et balisée en tant que <ref> de @type "entité collective". Notons que ces ajouts ont été effectué après l'emploi d'un autre script qui parcourt le texte complet et renvoit tous les mots commençant par une majuscule à l'exception d'une (longue) liste de terme à exclure (tel « Je » ou « ainsi » commençant une phrase) présent dans le corpus, permettant d'identifier les anthroponymes présents dans le recueil.
+%Nous ajoutons ensuite au script de nettoyage les noms des personnages des pièces de Beckett abondamment cité dans l'article «~Samuel Beckett, ou la présence sur la scène~» balisé en tant que <quote> et le concept de «~Nature~» balisé en tant que <ref> avec pour valeur de l'attribut @type "concept" et @cRef "philo\_nature", ainsi que l'Académie française mentionnée deux fois et balisée en tant que <ref> de @type "entité collective". Notons que ces ajouts ont été effectué après l'emploi d'un autre script qui parcourt le texte complet et renvoit tous les mots commençant par une majuscule à l'exception d'une (longue) liste de terme à exclure (tel «~Je~» ou «~ainsi~» commençant une phrase) présent dans le corpus, permettant d'identifier les anthroponymes présents dans le recueil.
 
 
 Puis grâce à une transformation xsl (voir \ref{ref:xsl_gen})sommaire, nous générons l'affichage des éléments <quote>, <ref> et <hi> munis d'un attribut @rend="italic" afin de les identifier, corriger et compléter si besoin. Cette vérification se fait livre en main~: la transformation renvoie également pour chaque élément identifié la page à laquelle il apparaît. Cette étape est répétée plusieurs fois, ce qui nous permet de raffiner le balisage automatique à chaque passage.
@@ -350,7 +367,7 @@ Avant de passer à l'encodage manuel nous utilisons une autre transformation xsl
     \item Les mentions des dates sont intégrées aux titres et encodées en tant que <date> avec un attribut @rend dont la valeur est "italic". Par ailleurs, nous en retirons les parenthèses qui provoquaient une erreur sans doute dû au moteur d'expression régulière d'Oxygen\footnoteB{En expression régulière, les signes «~()~» servent à garder en mémoire les caractères qu'ils contiennent. Or, notre transformation recourait au moteur d'expression régulière inclut dans Oxugen pour intégrer les dates au titre. Ceci provoquait une erreur~: la transformation considérait que les caractères «~()~» devait être interprété comme des délimiteurs d'expression régulière et non comme le contenu à supprimer, ainsi les dates étaient bien supprimées mais pas les parenthèses les entourants.}, les parenthèses seront rétablies dans la version html de l'édition.
     \item Tous les autres éléments et attributs déjà présents sont reproduits à l'identique. Par là nous nous assurons de pouvoir réappliquer la transformation sur notre fichier d'encodage manuel autant de fois que nécessaire. Nous nous contenterons de modifier le nom du fichier de sortie afin de ne pas écraser les précédentes itérations. Ainsi nous pouvons appliquer des corrections «~en cours de route~» sans perdre les ajouts manuels.
 \end{itemize}
-}
+
 
 \subsubsection{Encodage sémantique à la main}
 Certains contenus textuels ne peuvent être repérés automatiquement et nécessitent donc d'être encodés à la main.
@@ -361,7 +378,7 @@ Notons par ailleurs les difficultés à limiter le balisage. En effet l'on pourr
 
 Pour régler ces difficultés nous nous appuyons sur les objectifs que nous nous sommes fixés au moment où nous avons élaboré ce projet d'édition numérique~: nous souhaitons produire une édition qui expose les relations transtextuelles de \punr pour le replacer dans son époque, ou plutôt pour donner les représentations que le ce texte produit de son époque. Dès lors, il nous paraît intéressant de baliser les réactions (surtout (re)constituées) du public pour permettre de les comparer à la réalité de ces réactions. Au contraire les paraphrases (surtout si elles sont exactes) d'œuvres longuement commentées par \robbe, ne nous intérèsse que modéremment. La source identifiée, ou plutôt, vérifiée, l'intérêt des passages cités n'ont que peu d'interêt par rapport au commentaire dans son ensemble.
 
-De manière plus anecdotique, la recherche de chaîne de caractères contenant des appostrophe telles «~L'Étranger, L'Immortelle~» pose un problème épineux à résoudre car l'apostrophe est le signe utilisé par le moteur de recherche pour délimiter la chaîne. On écrit 
+De manière plus anecdotique, la recherche de chaîne de caractères contenant des apostrophe telles «~L'Étranger, L'Immortelle~» pose un problème épineux à résoudre car l'apostrophe est le signe utilisé par le moteur de recherche pour délimiter la chaîne. On écrit 
 \begin{itemize}
     \item 'L'étranger', 
     \item 'L\&apos;étranger',
@@ -371,7 +388,7 @@ le moteur renvoie une erreur. Une solution existe sans doute mais pour moins d'u
 % blabla
 
 
-L'encodage des sources citées se fait également à la main, chacun des textes du corpus sont ajoutés aux éléments <TEI> munis d'un attribut @xml:id servant à les identifier sur le modèle : initialdel'auteur_numérodel'œuvre » ainsi \textit{Mahu ou le matériau} sera désigné par « pr_01 » et \textit{Le Renard et la boussole} par « pr_02 ». Chacun des extraits est ensuite inséré dans un élément <div> ayant aussi un attribut @xml:id construit sur le modèle : iddel'œuvre_ordredelacitation », ainsi le premier extrait de \textit{Le Renard et la boussole} correspondra à « pr_02_01 ».    
+L'encodage des sources citées se fait également à la main, chacun des textes du corpus sont ajoutés aux éléments <TEI> munis d'un attribut @xml:id servant à les identifier sur le modèle~: initialdel'auteur\_numérodel'œuvre~» ainsi \textit{Mahu ou le matériau} sera désigné par «~pr\_01~» et \textit{Le Renard et la boussole} par «~pr\_02~». Chacun des extraits est ensuite inséré dans un élément <div> ayant aussi un attribut @xml:id construit sur le modèle~: iddel'œuvre\_pagededébutdelacitation~», ainsi le premier extrait de \textit{Le Renard et la boussole} correspondra à «~pr\_02\_09~».    
 
 \section{Vers l'édition numérique : transformation XSL}
 \label{ref:xsl_gen}
@@ -379,14 +396,26 @@ Une fois l'encodage terminé, l'encodeur concçoit une transformation XSL, soit 
     \subsection{Principes généraux}
 Les transformations XSL fonctionne par \textit{template}, patron, qui commande le traitement d'un ou de plusieurs éléments XML selon des restrictions diverses laissées au soin de l'auteur de la transformation. On peut par exemple transformer un élément <quote> muni d'un attribut @corresp en un lien hypertexte, qui, lié à des scripts (voir \ref{js}) permettra l'affichage de contenus supplémentaires. 
     \subsection{Mise en œuvre}
-}
+
 Pour tenter d'éviter une écriture redondante nous nous efforçons de produire des templates efficace et réemployable. Par exemple pour constituer les pages html de notre édition numérique il nous faut générer autant de «~<header/>~» (soit la section au sommet de la page) qu'il y a de page. Aussi, nous contentons-nous de n'écrire qu'une seule fois le «~<header/>~» (et tous les éléments identiques sur toutes les pages) au sein d'un template nommé qui est ensuite appelé à chage génération de page avec des paramètres permetttant de modifier quelques éléments essentiels qui doivent bien être unique (tel le titre de la page).
 %screen du template head et header
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{img/screen_header.jpg}
+    \caption{Templates gérant le bas (footer) et le haut (header) des pages}
+    \label{fig:enter-label}
+\end{figure}
 
 
 
 Notons que la production des pages est générée par un template matchant la racine du document xml et appelant le template nommé «~body~» qui lui-même appelle les templates \go<header>\gf, \go<footer>\gf etc., adaptant le contenu de la page selon des paramètre déclaré au moment de l'appel du template.
 %screen du template body
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{img/screen_body.jpg}
+    \caption{Extrait du template gérant la génération des pages du site}
+    \label{fig:enter-label}
+\end{figure}
 
 
 \section{Une expérience de lecture~: ajouts de scripts}
@@ -402,33 +431,58 @@ Une «~fonction~» est une suite d'instructions parfois conditionnés par des «
 % Afin d'expliciter la manière dont nous avons travaillé ces scripts, nous souhaiterions proposer une explication détaillée des techniques permettant l'affichage des extraits cités.
 
 % dans img/screen_quote_Xsl et Js1 et 2
-La première fonction que nous développons sert à afficher les extraits des autres œuvres cités ou mentionnés par \robbe. Nous choisissons de programmer un affichage que nous espérons élégant et pratique. En bas à droite de la page apparaît un encart contenant l'extrait cité, sa source et des informations quant à l'emploi de la citation (est-ce une «~mention~», est-ce un «~blâme~» ou un «~éloge~»?). L'encart est censé permettre de continuer à lire \punr{} sans avoir à le refermer. Moins élégant peut-être qu'une version qui obscurcirait le reste de l'écran, nous pensons que permettre tel usage correspond davantage à ce que souhaiterait un lecteur effectif.
 
+La première fonction que nous développons sert à afficher les extraits des autres œuvres cités ou mentionnés par \robbe. Nous choisissons de programmer un affichage que nous espérons élégant et pratique. En bas à droite de la page apparaît un encart contenant l'extrait cité, sa source et des informations quant à l'emploi de la citation (est-ce une «~mention~», est-ce un «~blâme~» ou un «~éloge~»?). L'encart est censé permettre de continuer à lire \punr{} sans avoir à le refermer. Moins élégant peut-être qu'une version qui obscurcirait le reste de l'écran, nous pensons que permettre tel usage correspond davantage à ce que souhaiterait un lecteur effectif.
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{img/screen_quote_result.jpg}
+    \caption{Capture d'écran du résultat obtenu}
+    \label{fig:enter-label}
+\end{figure}
 
 
 Au moyen de notre transformation xsl, nous créons pour chacune des citations l'appel d'une fonction qui recevra en paramètre (selon la citation) l'identifiant du passage cité~:
-%image de l'élément 
+
 
 On remarque que l'on injecte en paramètre l'identifiant (@corresp) du passage cité, et les statuts référentiels et axiologiques de la référence (@cert et @ana, respectivement) ainsi qu'un dernier paramètre dont les valeurs possibles sont «~1~» ou «~0~» qui sert à orienter le comportement de la fonction nommée «~displayExtract~».
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale =0.4]{img/screen_quote_js1.jpg}
+    \caption{Extrait du script gérant l'affichage des extraits cités}
+    \label{fig:displayExtract1}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale =0.4]{img/screen_quote_js2.jpg}
+    \caption{Extrait du script gérant l'affichage des extraits cités}
+    \label{fig:displayExtract2}
+\end{figure}
+
+
 En effet, cette fonction n'a qu'à rendre visible le passage concerné lorsque l'utilisateur clique sur une citation. Cependant les choses se compliquent dès lors que nous souhaitons afficher plus d'un extrait pour une même citation. En effet, la même citation par exemple «~Don~Quichotte~» dans l'article «~Un roman qui s'invente lui-même~» peut renvoyer à plusieurs passages de \textit{Le Renard et la boussole}. Or l'encodage xml-tei nous permet précisèment d'insérer plussieurs valeurs à l'attribut @corresp séparées par un espace.
 
-On aura donc~: \begin{verbatim}<quote corresp="pr_02_25 pr_02_50">Don Quichotte</quote>\end{verbatim} à prétraiter car notre script Javascript ne peut recevoir qu'une seule valeur en paramètre et ne sera pas capable d'interpréter une suite de valeur comme tel. Dès lors nous avons opté pour un prétraitement en xsl (voir \ref{%figure 1
-})
-%screen XSL
+On aura donc~: \begin{verbatim}<quote corresp="pr_02_25 pr_02_50">Don Quichotte</quote>\end{verbatim} à prétraiter car notre script Javascript ne peut recevoir qu'une seule valeur en paramètre et ne sera pas capable d'interpréter une suite de valeur comme tel. Dès lors nous avons opté pour un prétraitement en xsl (voir \ref{fig:corrspAfect}).
 
-%commentaire de l'xsl
-Nous souhaitons arriver au résultat suivant~: \begin{verbatim}<span onclick="displayExtract(pr_02_25_02);displayExtract(pr_02_25_50);>Don~Quichotte</span>\end{verbatim}, soit «~lorsque l'utilisateur clique sur ce segment la fonction displayExtract est appelée deux fois sur deux extraits différents. Pour ce faire nous devons séparer les deux valeurs et répéter la valeur de l'attribut @onclick en ne changeant qu'un seul paramètre. Dans un premier template xsl nous testons la présence ou non d'un espace au sein de la valeur @corresp. S'il y a un espace une première partie de la valeur de l'attribut @onclick (soit un premier extrait) est gérée après quoi un autre template est appelé. Ce template nommé «~correspAffect~» reçoit en paramètre tout le contenui de l'attribut qui suit l'espace, il procède ensuite de même~: gère le premier extrait en créant l'appel de la fonction sur ce qui précède l'espace (soit le deuxième extrait), puis via un appel recursif va gérer les unes après les autres toutes les valeurs de l'attribut @corresp après l'espace. S'appelant lui-même le template boucle sur une partie toujours plus réduite de l'attribut @corresp qui correspondront à autant de paramètres ensuite envoyé dans le Javascript jusq'à ce qu'il n'y ait plus d'espace au sein du reste de @corresp, alors, le template produit un dernier appel à la fonction (s'il n'y a plus d'espace il reste l'identifiant d'un extrait) puis s'arrête.
+
+Nous souhaitons arriver au résultat suivant~: \begin{verbatim}<span onclick="displayExtract(pr_02_25_02);displayExtract(pr_02_25_50);>Don~Quichotte</span>\end{verbatim}, soit «~lorsque l'utilisateur clique sur ce segment la fonction displayExtract est appelée deux fois sur deux extraits différents. Pour ce faire nous devons séparer les deux valeurs et répéter la valeur de l'attribut @onclick en ne changeant qu'un seul paramètre. Dans un premier template xsl nous testons la présence ou non d'un espace au sein de la valeur @corresp. S'il y a un espace une première partie de la valeur de l'attribut @onclick (soit un premier extrait) est gérée après quoi un autre template est appelé. Ce template nommé «~correspAffect~» reçoit en paramètre tout le contenu de l'attribut qui suit l'espace, il procède ensuite de même~: gère le premier extrait en créant l'appel de la fonction sur ce qui précède l'espace (soit le deuxième extrait), puis via un appel recursif va gérer les unes après les autres toutes les valeurs de l'attribut @corresp après l'espace. S'appelant lui-même le template boucle sur une partie toujours plus réduite de l'attribut @corresp qui correspondront à autant de paramètres ensuite envoyé dans le Javascript jusq'à ce qu'il n'y ait plus d'espace au sein du reste de @corresp, alors, le template produit un dernier appel à la fonction (s'il n'y a plus d'espace il reste l'identifiant d'un extrait) puis s'arrête.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{img/screen_quote_xsl.jpg}
+    \caption{Le template correspAffect qui sépare les correspondances multiples}
+    \label{fig:corrspAfect}
+\end{figure}
+
+
 %back to JS
 
 Une fois tous les appels à la fonction générés, il convient de permettre à la fonction elle-même d'effectivement afficher ces extraits. En effet, afin de permettre au lecteur de refermer un encart contenant un extrait à volonté, nous avons créé une fonction qui repère les extraits affichés (s'il y en a) et les cache (on revient donc à la situation initiale). Cette fonction est attachée à un segment en haut des encarts des extraits où un «~X~» symbolise efficacement une croix.
 Cependant il paraît très probable que le lecteur ne ferme pas lui-même les encart, nous l'encourageons d'ailleurs à le faire en lui permettant de continuer à lire le texte sans (trop) d'encombrement visuel. Aussi avons-nous décidé d'appeler la fonction refermant les encarts ouverts au sein de la fonction les affichants avant qu'elle ne les fasse apparaître.
 Lorsqu'un seul extrait est à afficher cela ne pose pas de problème~: la fonction ferme les encarts affichées puis ouvre celui sur lequel le lecteur a cliqué. Cependant dans les cas où plusieurs extraits sont à afficher, la fonction les affichera puis les cachera de nouveaux jusqu'au dernier appelé. Nous ajoutons donc un dernier paramaître à cette fonction~: «~c~» dont les valeurs («~0~» ou «~1~») détermineront si la fonction doit, ou non, cacher les extraits précédemment affichés. 
 %capture d'écran fonction JS
-Ainsi voit-on \ref{%figureXXXX
-}   
-l.~%numéros ligne
-, l'ajout d'un '0' à la fin des appels générés s'ils ne sont pas les premiers (ou/et les seuls).
+Ainsi voit-on \ref{fig:corrspAfect}, lignes~419-422, l'ajout d'un '0' à la fin des appels générés s'ils ne sont pas les premiers (ou/et les seuls).
+
 
 Si c'est bien Javascript qui produit l'affichage et lie plusieurs éléments html générés via xsl depuis l'xml, c'est ici encore l'xsl qui nous permet de produire très efficacement des liens complexes entre différents langage de programmation.
 
@@ -440,7 +494,7 @@ Si c'est bien Javascript qui produit l'affichage et lie plusieurs éléments htm
     \subsection{Interactivité de la base de donnée}
 
 
-Afin de rendre la base de donnée lisible, plus aisément que dans un tableau nous employons l'outil GraphCommons\footnoteB{Voir : \href{https://graphcommons.com/graphs/2ffc7c8c-3d1b-4814-966b-593b1c206f3c}{https://graphcommons.com/graphs/2ffc7c8c-3d1b-4814-966b-593b1c206f3c}.}.
+Afin de rendre la base de donnée lisible, plus aisément que dans un tableau nous employons l'outil GraphCommons\footnoteB{Voir~: \href{https://graphcommons.com/graphs/2ffc7c8c-3d1b-4814-966b-593b1c206f3c}{https://graphcommons.com/graphs/2ffc7c8c-3d1b-4814-966b-593b1c206f3c}.}.
 
 Cet outil premet la production de graphique depuis un fichier de type .csv, (soit un document texte, interprétable comme un tableau par les application de type tableur et assurant une interopérabilité très élevée notamment au sein de script perl ou javascript). Ainsi, nous exportant le contenu de la base de donnée au bon format puis retravaillons les données pour un meilleur affichage dans l'application.
 La base de données est d'abord exportée au format .csv, le tableau au fichier texte que l'on obtient a alors une colonne (les colonnes sont séparées au sein du texte par des virgules) par propriété des entitées (voir~: \ref{ref:db_modele_relationnel}) de la base afin d'être utilisable par l'application GraphCommons, les colonnes nécessitent d'être renommée et quelques valeurs ajustées. En effet, une colonne «~weight~» qui détermine la taille d'un lien est interprétée de manière croissante, or nous avions choisis de représenter l'intencité des liens de manière décroissante («~0~» étant la citation et «~la mention reconstitée~»), pour un affichage approrpiée nous modifions donc les valeurs pour les inverser et renommons les colonnes notamment grâce à des scripts perl rudimentaires.
@@ -455,9 +509,9 @@ La base de données est d'abord exportée au format .csv, le tableau au fichier 
 
 \section{Conclusion}
 
-Tout au long de notre travail nous nous sommes efforcé d'employer la technique au service de questions scientifiques. Et si, bien souvent, la technique interroge le choix scientifique, nous nous sommes evertué à ne pas confondre questions et difficultés techniques. En effet trop souvent, sommes-nous tenter de remettre en question le 
+Tout au long de notre travail nous nous sommes efforcé d'employer la technique au service de questions scientifiques. Et si, bien souvent, la technique interroge le choix scientifique, nous nous sommes évertué à ne pas confondre questions et difficultés techniques. En effet trop souvent, sommes-nous tenter de remettre en question le 
 
-sans doute, tout n'y est pas, sans doute chercher à identifier et produire toutes les citations en contextes relève de l'impossible : \robbe{} peut s'être trompé, l'édition avoir disparu, une citation en appelle une autre, etc. Pareil projet cependant se mène non en ayant à cœur de couvrir l'ouvrage entier (du moins sans s'en faire l'illusion) et toute son époque, mais bien en sachant que l'on ne propose qu'une lecture, partialle partielle parmi d'autres,  qui n'épuise pas l'œuvre.
+sans doute, tout n'y est pas, sans doute chercher à identifier et produire toutes les citations en contextes relève de l'impossible~: \robbe{} peut s'être trompé, l'édition avoir disparu, une citation en appelle une autre, etc. Pareil projet cependant se mène non en ayant à cœur de couvrir l'ouvrage entier (du moins sans s'en faire l'illusion) et toute son époque, mais bien en sachant que l'on ne propose qu'une lecture, partialle partielle parmi d'autres,  qui n'épuise pas l'œuvre.
 
 
 \end{document}
