--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -486,7 +486,11 @@ Ainsi voit-on \ref{fig:corrspAfect}, lignes~419-422, l'ajout d'un '0' à la fin 
 
 Si c'est bien Javascript qui produit l'affichage et lie plusieurs éléments html générés via xsl depuis l'xml, c'est ici encore l'xsl qui nous permet de produire très efficacement des liens complexes entre différents langage de programmation.
 
+\subsubsection{Permettre des variantes d'affichage}
 
+Afin de permettre un confort de lecture accru, du moins personnalisable, deux boutons sont ajoutés. Le premier situé en haut à droite de la page permet de passer d'un thème clair à un thème sombre. Le second n'est présent que sur les pages des articles de \punr{} et permet d'afficher ou de masquer les numéros de page de l'édition utilisée pour le présent travail\footnoteB{\robbe{},\punr{}, Paris, Éditions de Minuit, coll. «~Double~», [1963] 2011}. Ces deux boutons appellent des fonctions qui stockent le choix de l'utilisateur ce qui évite à l'utilisateur d'avoir à cliquer de nouveau à chaque chargement de page. Notons que le choix de l'utilisateur est stocké parmi les fichiers temporaires du navigateur employé, dès lors peut-être supprimé en vidant le cache du navigateur mais égalment en cliquant sur les boutons de manière à réinitialiser l'affichage, car le passage au thème clair et le masquage des numéros de page éliminent le fichier temporaire.
+
+% \subsubsection{Les références}
 
 \subsubsection{Afficher les variantes}
 
